--- a/static/css/main.css
+++ b/static/css/main.css
@@ -56,7 +56,15 @@ html, body {
   width: 100%;
 }
 
-#pndra-audioCanvas {
+#pndra-albumSelect {
+  padding: 50px;
   width: 100%;
+  height: 400px;
+}
+
+#pndra-audioCanvas {
+  padding: 50px;
+  width: 50%;
   height: 300px;
 }
+
