--- a/static/css/main.css
+++ b/static/css/main.css
@@ -60,6 +60,19 @@ html, body {
   padding: 50px;
   width: 100%;
   height: 400px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justifyContent: flex-start;
+  color: white;
+}
+
+#pndra-albumSelect .pndra-album {
+  padding: 5px;
+  width: 150px;
+  height: 300px;
+  text-align: center;
 }
 
 #pndra-audioCanvasLeft {
