--- a/static/css/main.css
+++ b/static/css/main.css
@@ -64,15 +64,47 @@ html, body {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justifyContent: flex-center;
+  color: white;
+}
+
+#pndra-albumSelect .pndra-albumNav {
+  padding: 5px;
+  width: 40px;
+  height: 80px;
+  text-align: center;
+}
+
+#pndra-albumSelect #pndra-albumList {
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   justifyContent: flex-start;
   color: white;
 }
 
 #pndra-albumSelect .pndra-album {
+  margin: 10px;
   padding: 5px;
-  width: 150px;
+  width: 140px;
   height: 300px;
   text-align: center;
+  /* border: 1px solid white; */
+}
+
+#pndra-albumSelect .pndra-album img {
+  position: 0 0 absolute;
+  width: 130px;
+  height: 130px;
+}
+
+#pndra-albumSelect .pndra-album .albumText {
+  position: 150 0 absolute;
+  width: 150px;
+  height: 150px;
 }
 
 #pndra-audioCanvasLeft {
