--- a/static/css/main.css
+++ b/static/css/main.css
@@ -23,12 +23,10 @@ html, body {
   right: 0;
   bottom: 0;
   left: 0;
-  min-height: 600px;
+  min-height: 650px;
   min-width: 1000px;
   overflow: hidden;
   padding: 0;
-  /* display: 'flex', */
-  /* flexFlow: 'row wrap', */
   background-image: url('http://www.pandora.com/static/valances/pandora/default/skin_background.jpg');
 }
 
@@ -38,7 +36,7 @@ html, body {
   left: 0;
   right: 0;
   width: 100%;
-  position: fixed;
+  position: absolute;
   background-color: #1c3f5b;
 }
 
@@ -47,18 +45,23 @@ html, body {
   top: 30px;
   left: 0;
   bottom: 0;
-  min-height: 600px;
+  min-height: 650px;
   width: 300px;
   background-color: #465c7d;
   color: white;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 
   text-align: center;
 }
 
 #pndra-createStationInput {
-  width: 250px;
+  width: 300px;
   margin: 0 auto;
-  padding-top: 10px;
+  padding: 10px;
 }
 
 #pndra-stationList {
@@ -75,11 +78,6 @@ html, body {
 #pndra-stationList li.active {
   color: #accdff;
   font-weight: bold;
-}
-
-#pndra-audioPlayerContainer {
-  position: absolute;
-  bottom: 250px;
 }
 
 .pndra-progressBar {
@@ -107,8 +105,6 @@ html, body {
   height: 200px;
   width: 300px;
   padding: 10px;
-  position: absolute;
-  bottom: 0;
 
   color: white;
   display: flex;
@@ -167,7 +163,6 @@ html, body {
   flex-direction: row;
   align-items: center;
   justifyContent: flex-start;
-  flex-shrink: 0;
   color: white;
 }
 
@@ -177,6 +172,7 @@ html, body {
   width: 140px;
   height: 100%;
   text-align: center;
+  flex-shrink: 0;
   /* border: 1px solid white; */
 }
 
