Added delete playlists option. Fixed some playlist-related bugs

--- a/static/css/hover.css
+++ b/static/css/hover.css
@@ -32,3 +32,11 @@
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
+
+.hvr-blue:hover {
+  color: #accdee
+}
+
+.hvr-red:hover {
+  color: #ff8585
+}
