--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,15 +1,3 @@
-@font-face {
-  font-family: 'Proxima Nova';
-  src: url('proxima-nova.otf');
-}
-
-html, body {
-  height: 100%;
-  margin: 0;
-  padding; 0;
-  font-family: 'Proxima Nova', 'Open Sans', 'Source Sans Pro', 'Droid Sans', sans-serif;
-}
-
 #pndra-main {
   height: 100%;
   width: 100%;
@@ -27,7 +15,9 @@ html, body {
   min-width: 1000px;
   overflow: hidden;
   padding: 0;
-  background-image: url('http://www.pandora.com/static/valances/pandora/default/skin_background.jpg');
+  /* background-image: url('http://www.pandora.com/static/valances/pandora/default/skin_background.jpg'); */
+  background-image: url('/static/assets/background.jpg');
+  background-size: cover;
 }
 
 #pndra-sideNav {
@@ -38,7 +28,12 @@ html, body {
   min-height: 650px;
   width: 300px;
   padding: 10px;
-  background-color: #465c7d;
+  background-color: #02142f;
+  /* Clear background?
+  border-right: 1px;
+  border-right-style: solid;
+  border-color: #02142f;
+  */
   color: white;
 
   display: flex;
