Updated the login page. Committed the new CSS (forgot to put them in the previous commit)

--- a/templates/login.html
+++ b/templates/login.html
@@ -8,9 +8,17 @@
     <div id="pndra-login">
       <div id="pndra-loginBoxBorder">
         <div id="pndra-loginBox">
+          <span id="welcome1">
+            Welcome to <span class="blue">Dandora</span>
+          </span>
+          <span id="welcome2">
+            Sign in with Twitter
+          </span>
           <a href="/login/auth">
             <img src="/static/assets/twitter-login.png"></img>
           </a>
+          <span id="welcome3">or create a station without signing in</span>
+          <input type="text" class="form-control" placeholder="Create a station">
         </div>
       </div>
     </div>
