--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,6 +3,14 @@
   width: 100%;
 }
 
+.pndra-blur {
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+}
+
 #pndra-mainContainer {
   position: absolute;
   height: 100%;
@@ -15,7 +23,11 @@
   min-width: 1000px;
   overflow: hidden;
   padding: 0;
-  /* background-image: url('http://www.pandora.com/static/valances/pandora/default/skin_background.jpg'); */
+}
+
+#pndra-mainContainer .background {
+  height: 100%;
+  width: 100%;
   background-image: url('/static/assets/background.jpg');
   background-size: cover;
 }
@@ -48,6 +60,14 @@
   width: 300px;
   margin: 0 auto;
   padding: 10px;
+}
+
+#pndra-createStationPopover {
+  width: 200px;
+  color: black;
+  top: 0px;
+  left: 290px;
+  visibility: hidden;
 }
 
 #pndra-stationList {
