Changed the album select style to panel cards. Cut off long title/artist text. Added a favicon

--- a/templates/_header.html
+++ b/templates/_header.html
@@ -1,6 +1,7 @@
 <title>Dandora</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<link rel="shortcut icon" href="{{ url_for('static', filename='assets/favicon.ico') }}"/>
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro|Droid+Sans">
 <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
