--- a/static/css/main.css
+++ b/static/css/main.css
@@ -39,7 +39,6 @@
   bottom: 0;
   min-height: 650px;
   width: 300px;
-  padding: 10px;
   background-color: #02142f;
   /* Clear background?
   border-right: 1px;
@@ -59,7 +58,7 @@
 #pndra-createStationInput {
   width: 300px;
   margin: 0 auto;
-  padding: 10px;
+  padding: 15px;
 }
 
 #pndra-createStationPopover {
@@ -141,11 +140,30 @@
 }
 
 #pndra-sideNavAlbum div {
+  width: 200px;
   text-align: center;
 }
 
+#pndra-sideNavAlbum .albumTitle {
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+#pndra-sideNavAlbum .albumArtist {
+  margin-top: 5px;
+  font-size: 0.95em;
+}
+
 #pndra-logout {
+  border-top: 1px solid;
+  border-color: rgba(194,229,255,0.2);
+  width: 300px;
+  height: 40px;
+  padding: 5px;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #pndra-mainView {
@@ -158,7 +176,8 @@
 }
 
 #pndra-albumSelect {
-  padding: 50px;
+  padding-left: 30px;
+  padding-right: 30px;
   padding-bottom: 0;
   width: 100%;
   height: 400px;
@@ -166,7 +185,6 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justifyContent: flex-center;
   color: white;
 }
 
@@ -184,41 +202,64 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justifyContent: flex-start;
+  justify-content: flex-start;
   color: white;
 }
 
 #pndra-albumSelect .pndra-album {
-  margin: 10px;
-  padding: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
   width: 140px;
-  height: 100%;
+  height: 240px;
   text-align: center;
   flex-shrink: 0;
-  /* border: 1px solid white; */
+  background-color: white;
+  box-shadow: 1px 1px 5px 0px #032352;
+}
+
+#pndra-albumSelect .pndra-album.selected {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 #pndra-albumSelect .pndra-album img {
-  position: 0 0 absolute;
   background-color: white;
-  width: 130px;
-  height: 130px;
-}
-
-#pndra-albumSelect .pndra-album.selected img {
-  position: 0 0 absolute;
   width: 140px;
   height: 140px;
 }
 
-#pndra-albumSelect .pndra-album .albumText {
-  position: 150 0 absolute;
-  width: 150px;
-  height: 150px;
+#pndra-albumSelect .pndra-album .albumTitle {
+  width: 140px;
+  height: 65px;
+  padding: 5px;
+  font-size: 0.85em;
+  font-weight: bold;
+  color: #666666;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-#pndra-albumSelect .pndra-album.selected .albumText div {
-  font-size: 1.1em;
-  color: #accdff;
+
+#pndra-albumSelect .pndra-album hr {
+  display: block;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: auto;
+  margin-right: auto;
+  border-width: 1px;
+}
+
+#pndra-albumSelect .pndra-album .albumArtist {
+  width: 140px;
+  height: 35px;
+  padding: 5px;
+  font-size: 0.8em;
+  color: #999999;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #pndra-audioCanvasLeft {
