--- a/static/css/main.css
+++ b/static/css/main.css
@@ -262,15 +262,36 @@
   justify-content: center;
 }
 
-#pndra-audioCanvasLeft {
+#pndra-audioCanvasContainerLeft {
   padding: 20px;
   width: 50%;
   height: 300px;
   float: left;
+
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-#pndra-audioCanvasRight {
+#pndra-audioCanvasLeft {
+  width: 100%;
+  height: 100%;
+}
+
+#pndra-audioCanvasContainerRight {
   padding: 20px;
   width: 50%;
   height: 300px;
+  float: right;
+
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#pndra-audioCanvasRight {
+  width: 100%;
+  height: 100%;
 }
